--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "electron-updater": "5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "license": ""
 }
