--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "npx prettier --write \"**/*.{js,mjs,cjs,ts,mts,cts,vue,json}\""
   },
   "devDependencies": {
+    "@types/node": "^18.15.2",
     "cross-env": "7.0.3",
     "electron": "20.1.3",
     "electron-builder": "23.3.3",
@@ -27,7 +28,9 @@
     "electron-updater": "5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sql.js": "^1.8.0",
     "sqlite3": "^5.1.4",
+    "typeorm": "^0.3.12",
     "vite-plugin-svgr": "^2.4.0"
   },
   "license": ""
