--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "electron-updater": "5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sql.js": "^1.8.0",
-    "sqlite3": "^5.1.4",
+    "sequelize": "^6.29.3",
+    "sqlite3": "^5.1.6",
     "typeorm": "^0.3.12",
     "vite-plugin-svgr": "^2.4.0"
   },
