--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "format": "npx prettier --write \"**/*.{js,mjs,cjs,ts,mts,cts,vue,json}\""
   },
   "devDependencies": {
-    "@types/node": "^18.15.2",
     "cross-env": "7.0.3",
     "electron": "20.1.3",
     "electron-builder": "23.3.3",
@@ -28,9 +27,9 @@
     "electron-updater": "5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.3",
     "sqlite3": "^5.1.6",
-    "typeorm": "^0.3.12",
     "vite-plugin-svgr": "^2.4.0"
   },
   "license": ""
