--- a/.github/workflows/dist-main.yml
+++ b/.github/workflows/dist-main.yml
@@ -20,7 +20,9 @@ jobs:
         with:
           node-version: 16 # Need for npm >=7.8
           cache: 'npm'
-      - run: npm install
+
+      - run: npm ci
+
       - run: npm version --no-git-tag-version patch
       - id: package-version
         uses: martinbeentjes/npm-get-version-action@master
@@ -57,7 +59,7 @@ jobs:
           with:
             node-version: '16'
         - run: npm version --no-git-tag-version patch
-        - run: npm install
+        - run: npm ci
         - run: npm run compile
         - run: |
             mv ./dist/TestingApp*.deb ./dist/TestingApp.deb
@@ -102,7 +104,7 @@ jobs:
         with:
           node-version: '16'
       - run: npm version --no-git-tag-version patch
-      - run: npm install
+      - run: npm ci
       - run: npm run compile
       - run: mv ./dist/TestingApp*.exe ./dist/TestingApp.exe
       - name: Upload release binary .exe
@@ -131,7 +133,7 @@ jobs:
         with:
           node-version: '16'
       - run: npm version --no-git-tag-version patch
-      - run: npm install
+      - run: npm ci
       - run: npm run compile
 
       - run: mv ./dist/TestingApp*.dmg ./dist/TestingApp.dmg
