--- a/.github/workflows/dist-main.yml
+++ b/.github/workflows/dist-main.yml
@@ -1,7 +1,7 @@
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      message:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
