--- a/package.json
+++ b/package.json
@@ -7,27 +7,18 @@
     "email": "saharzelonagora@gmail.com"
   },
   "version": "1.0.5",
-  "main": "packages/main/dist/index.cjs",
-  "build": {
-    "appId": "io.saharzelo.github.kindle-companion",
-    "extends": null,
-    "linux": {
-      "synopsis": "Kindle Clippings and vocabulary Manager",
-      "icon": "",
-      "category": "Development",
-      "target": [
-        "deb",
-        "snap"
-      ]
-    }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sahar10501/kindle-companion.git"
   },
+  "main": "packages/main/dist/index.cjs",
   "scripts": {
     "build": "npm run build:main && npm run build:preload && npm run build:renderer",
     "build:main": "cd ./packages/main && vite build",
     "build:preload": "cd ./packages/preload && vite build",
     "build:renderer": "cd ./packages/renderer && vite build",
     "compileAll": "cross-env MODE=production npm run build && electron-builder -mw --config .electron-builder.config.js --dir --config.asar=false",
-    "compile": "cross-env MODE=production npm run build && electron-builder build --publish=never",
+    "compile": "cross-env MODE=production npm run build && electron-builder build --config .electron-builder.config.js --publish=never",
     "watch": "node scripts/watch.mjs",
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 electron scripts/update-electron-vendors.mjs"
   },
@@ -41,6 +32,7 @@
   "dependencies": {
     "@vitejs/plugin-react": "^2.1.0",
     "electron-updater": "5.2.1",
+    "fs-extra": "^11.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sqlite3": "^5.1.6",
